--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,96 +4,151 @@
   <meta charset="utf-8">
   <!-- 모바일 퍼스트 뷰포트 -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/pretendard.css" />
-
+  <!-- Pretendard 폰트 -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/pretendard.css" />
   <title>GAIA 모의고사 복습 사이트</title>
   <style>
     /* ── 공통 레이아웃 ── */
-    body { margin:0; padding:1rem; font-family:'Pretendard', sans-serif; font-weight: 400; background:#f9f9f9; }
-button {
-  font-family: 'Pretendard', sans-serif;
-}
+    body {
+      margin:0;
+      padding:1rem;
+      font-family:'Pretendard', sans-serif;
+      font-weight:400;
+      background:#f9f9f9;
+    }
+    .container {
+      max-width:400px;
+      margin:0 auto;
+      background:white;
+      padding:1rem;
+      border-radius:8px;
+      box-shadow:0 2px 6px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin:0 0 .5rem;
+      font-size:1.5rem;
+      text-align:center;
+    }
+    .top-gif {
+      display:block;
+      width:100%;
+      max-width:200px;
+      height:auto;
+      margin:0 auto 1rem;
+    }
+    .home-button {
+      display:flex;
+      align-items:center;
+      cursor:pointer;
+      margin-bottom:1rem;
+      color:#007bff;
+    }
+    .home-button img {
+      width:16px;
+      height:16px;
+      margin-right:.25rem;
+    }
+    input, select, button {
+      display:block;
+      width:100%;
+      padding:.75rem;
+      font-size:1rem;
+      margin:.5rem 0;
+      box-sizing:border-box;
+      border:1px solid #ccc;
+      border-radius:4px;
+    }
+    button {
+      font-family:'Pretendard',sans-serif;
+      border:none;
+      background:#007bff;
+      color:white;
+    }
+    p.error {
+      color:#d00;
+      font-size:.9rem;
+      text-align:center;
+      margin:.25rem 0 0;
+    }
 
-    .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; }
-    .top-gif { display:block; width:100%; max-width:200px; height:auto; margin:0 auto 1rem; }
-    .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; color:#007bff; }
-    .home-button img { width:16px; height:16px; margin-right:.25rem; }
-    input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
-    button { background:#007bff; color:white; border:none; }
-    p.error { color:#d00; font-size:.9rem; text-align:center; margin:.25rem 0 0; }
-    .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
-.menu-button {
-  font-size: 1rem;
-  margin-bottom: .75rem;
-  padding: .75rem;
-  border: none;
-  border-radius: 4px;
-  width: 100%;
-  cursor: pointer;
-  font-family: 'Pretendard', sans-serif;
-}
+    /* ── 메뉴 버튼 (1번 제거) ── */
+    .menu-button {
+      font-size:1rem;
+      margin-bottom:.75rem;
+      padding:.75rem;
+      border-radius:4px;
+      width:100%;
+      cursor:pointer;
+      font-family:'Pretendard',sans-serif;
+    }
+    #menuReview {
+      background-color:#47B5FF;
+      color:white;
+    }
+    #menuQuiz {
+      background-color:#DFF6FF;
+      color:#1363DF;
+      border:1px solid #1363DF;
+    }
 
-/* 버튼 개별 색상 지정 */
-#menuReport {
-  background-color: #1363DF; /* 진한 파랑 */
-  color: white;
-}
-#menuReview {
-  background-color: #47B5FF; /* 밝은 파랑 */
-  color: white;
-}
-#menuQuiz {
-  background-color: #DFF6FF; /* 하늘색 */
-  color: #1363DF;             /* 글자색은 진한 파랑 */
-  border: 1px solid #1363DF;  /* 테두리로 강조 */
-}
-
-    .menu-button:nth-child(2) { background:#ffc107; }
-    .menu-button:nth-child(3) { background:#dc3545; }
-    .report-img { display:block; max-width:100%; margin:0 auto; }
     .hidden { display:none !important; }
 
     /* ── 틀린 문제 다시 풀어보기 스타일 ── */
-    #questionImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
+    #questionImage {
+      width:100%; height:auto; margin:1rem 0;
+      border:1px solid #ccc; border-radius:4px;
+    }
     #choiceButtons { text-align:center; }
     #choiceButtons button {
-      display:inline-block; width:18%; margin:1%; padding:.75rem 0;
-      font-size:1.5rem; /* 선택지 기호 크기 키움 */
+      display:inline-block; width:18%; margin:1%;
+      padding:.75rem 0; font-size:1.5rem;
       border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
     #submitButton, #toQuizButton, #skipButton {
-      display:block; width:100%; margin:1rem 0; padding:.75rem; font-size:1rem;
+      display:block; width:100%; margin:1rem 0;
+      padding:.75rem; font-size:1rem;
       border:none; border-radius:4px; cursor:pointer;
     }
-    #submitButton   { background:#007bff; }
-    #toQuizButton   { background:#17a2b8; }
-    #skipButton     { background:#6c757d; }
-    #feedback { text-align:center; font-size:1.1rem; margin-top:1rem; }
+    #submitButton { background:#007bff; color:white; }
+    #toQuizButton { background:#17a2b8; color:white; }
+    #skipButton { background:#6c757d; color:white; }
+    #feedback {
+      text-align:center; font-size:1.1rem; margin-top:1rem;
+    }
     #retryButton, #explainButton, #nextButton {
-      display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
+      display:block; width:100%; padding:.75rem;
+      margin:.5rem 0; font-size:1rem;
       border:none; border-radius:4px; cursor:pointer;
     }
-    #retryButton   { background:#007bff; }
-    #explainButton { background:#17a2b8; }
-    #nextButton    { background:#28a745; }
-    #explanationImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
+    #retryButton { background:#007bff; color:white; }
+    #explainButton { background:#17a2b8; color:white; }
+    #nextButton { background:#28a745; color:white; }
+    #explanationImage {
+      width:100%; height:auto; margin:1rem 0;
+      border:1px solid #ccc; border-radius:4px;
+    }
 
     /* ── OX 퀴즈 스타일 ── */
-    #originalQuestion { text-align:center; color:red; font-size:1rem; margin-top:1rem; }
+    #originalQuestion {
+      text-align:center; color:red; font-size:1rem;
+      margin-top:1rem;
+    }
     #quizSentenceSection, #quizFeedbackSection { padding:1rem 0; }
     #quizSentence { font-size:1rem; margin:1rem 0; }
     #oxButtons { text-align:center; }
     #oxButtons button {
-      display:inline-block; width:40%; margin:1%; padding:.75rem 0;
-      font-size:1.5rem; /* O/X 기호 크기 키움 */
+      display:inline-block; width:40%; margin:1%;
+      padding:.75rem 0; font-size:1.5rem;
       border:1px solid #007bff; border-radius:4px;
       background:white; color:#007bff; cursor:pointer;
     }
-    #quizFeedback { text-align:center; font-size:1.1rem; margin:1rem 0; }
+    #quizFeedback {
+      text-align:center; font-size:1.1rem; margin:1rem 0;
+    }
     #quizOptions button {
-      display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem;
+      display:block; width:100%; padding:.75rem;
+      margin:.5rem 0; font-size:1rem;
       border:none; border-radius:4px; cursor:pointer;
     }
     #quizNextSentenceButton { background:#ffc107; color:white; }
@@ -116,7 +171,6 @@ button {
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
-
     <!-- ② 회차 선택 -->
     <div id="examSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
@@ -128,13 +182,12 @@ button {
     <!-- ③ 메뉴 -->
     <div id="menuSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
       <button id="menuReview" class="menu-button">2. 틀린 문제 다시 풀어보기</button>
       <button id="menuQuiz" class="menu-button">3. 틀린 문제 O/X 퀴즈</button>
       <p id="menuMsg" class="error"></p>
     </div>
 
-    <!-- ④ 성적표 -->
+    <!-- ④ 성적표 (버튼 제거로 호출 안 됨) -->
     <div id="reportSection" class="hidden">
       <h1>내 성적표</h1>
       <img id="reportImage" class="report-img" alt="성적표 이미지">
@@ -149,18 +202,17 @@ button {
         <div id="choiceButtons"></div>
         <button id="submitButton" class="hidden">제출하기</button>
         <button id="toQuizButton" class="hidden">O/X 퀴즈 풀러가기</button>
-        <button id="skipButton"   class="hidden">SKIP</button>
+        <button id="skipButton" class="hidden">SKIP</button>
         <p id="reviewMsg" class="error"></p>
       </div>
       <div id="reviewFeedbackSection" class="hidden">
         <p id="feedback"></p>
         <img id="explanationImage" class="hidden" alt="해설 이미지">
-        <button id="retryButton"   class="hidden">다시 풀어보기</button>
+        <button id="retryButton" class="hidden">다시 풀어보기</button>
         <button id="explainButton" class="hidden">해설 확인하기</button>
-        <button id="nextButton"    class="hidden">다음 문제</button>
+        <button id="nextButton" class="hidden">다음 문제</button>
       </div>
     </div>
-
     <!-- ⑥ 틀린 문제 O/X 퀴즈 -->
     <div id="quizSection" class="hidden">
       <h1>틀린 문제 O/X 퀴즈</h1>
@@ -251,22 +303,7 @@ button {
       document.getElementById('homeButton').classList.remove('hidden');
     };
 
-    // 3) 내 성적표
-    document.getElementById('menuReport').onclick = () => {
-      hideAll(); clearMsgs(); resetReviewUI();
-      document.getElementById('reportSection').classList.remove('hidden');
-      fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
-        .then(r=>r.json())
-        .then(d => {
-          if (d.url) document.getElementById('reportImage').src = d.url;
-          else       document.getElementById('reportMsg').textContent = d.error;
-        })
-        .catch(() => {
-          document.getElementById('reportMsg').textContent = '로드 오류';
-        });
-    };
-
-    // 4) 틀린 문제 다시 풀어보기
+    // 3) 틀린 문제 다시 풀어보기
     document.getElementById('menuReview').onclick = () => {
       hideAll(); clearMsgs(); resetReviewUI();
       document.getElementById('reviewSection').classList.remove('hidden');
@@ -281,14 +318,11 @@ button {
           document.getElementById('reviewMsg').textContent = '불러오기 오류';
         });
     };
-
     function loadQuestion(qno) {
       clearMsgs(); resetReviewUI();
-      // 문제 이미지
       const qi = document.getElementById('questionImage');
       qi.src = `/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`;
       qi.classList.remove('hidden');
-      // 선택지
       const cb = document.getElementById('choiceButtons');
       ['①','②','③','④','⑤'].forEach((label, idx) => {
         const btn = document.createElement('button');
@@ -300,7 +334,6 @@ button {
         };
         cb.appendChild(btn);
       });
-      // 제출, OX 퀴즈, SKIP 버튼
       document.getElementById('submitButton').classList.remove('hidden');
       document.getElementById('submitButton').onclick = () => submitAnswer(qno);
       document.getElementById('toQuizButton').classList.remove('hidden');
@@ -321,7 +354,7 @@ button {
       }
       clearMsgs();
       fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`)
-        .then(r=>r.json())
+        .then(r => r.json())
         .then(d => {
           document.getElementById('reviewQuestionSection').classList.add('hidden');
           const fb = document.getElementById('feedback');
@@ -371,7 +404,10 @@ button {
           currentSentenceIndex = 0;
           loadQuizSentences(wrongList[0]);
         })
-        .catch(() => alert('OX 퀴즈 로드 오류'));
+        .catch(() => {
+          document.getElementById('menuMsg').textContent = 'OX 퀴즈 로드 오류';
+          document.getElementById('menuMsg').style.color = '#d00';
+        });
     };
 
     function loadQuizSentences(qno) {
@@ -381,14 +417,14 @@ button {
           return res.json();
         })
         .then(d => {
-          if (d.error) throw new Error(d.error);
           quizSentences = d.sentences;
           currentSentenceIndex = 0;
           showQuizSentence();
         })
         .catch(err => {
           const fb = document.getElementById('quizFeedback');
-          fb.textContent = err.message; fb.style.color = '#dc3545';
+          fb.textContent = err.message;
+          fb.style.color = '#dc3545';
           document.getElementById('quizFeedbackSection').classList.remove('hidden');
         });
     }
@@ -413,7 +449,6 @@ button {
       fb.style.color = ans === correct ? '#007bff' : '#dc3545';
       document.getElementById('quizSentenceSection').classList.add('hidden');
       document.getElementById('quizFeedbackSection').classList.remove('hidden');
-
       document.getElementById('quizNextSentenceButton').classList.remove('hidden');
       document.getElementById('quizNextSentenceButton').onclick = () => {
         if (currentSentenceIndex < quizSentences.length - 1) {
@@ -421,7 +456,6 @@ button {
           showQuizSentence();
         }
       };
-
       document.getElementById('quizNextQuestionButton').classList.remove('hidden');
       document.getElementById('quizNextQuestionButton').onclick = () => {
         currentWrongIndex++;
@@ -431,7 +465,6 @@ button {
           location.reload();
         }
       };
-
       document.getElementById('quizReviewOriginalButton').classList.remove('hidden');
       document.getElementById('quizReviewOriginalButton').onclick = () => {
         hideAll(); clearMsgs(); resetReviewUI();
@@ -446,9 +479,7 @@ button {
       document.getElementById('menuSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
+
   </script>
 </body>
 </html>
-
-
-
